--- a/alert_window/src/index.css
+++ b/alert_window/src/index.css
@@ -5,18 +5,38 @@ body {
 
 canvas { display: block; }
 
-.img-container {
+.container {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-h1 {
-  text-align: center;
+.flex-container-center {
+  display: flex;
+  justify-content: center;
 }
 
 img {
   margin-top: 100px;
   width: 348px;
   height: 348px;
+}
+
+button {
+  width: 200px;
+  padding: 10px;
+  background: transparent;
+  border: 2px solid white;
+  border-radius: 4px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+button:hover {
+  background: #999999;
 }
