--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ form {
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  max-width: 500px;
+  max-width: 600px;
   width: 100%;
 }
 
@@ -33,12 +33,14 @@ h2 {
 
 label {
   display: block;
+  margin-top: 10px;
   margin-bottom: 5px;
+  margin-right: 10px;
   color: #666;
 }
 
 input[type="time"] {
-  width: calc(50% - 10px);
+  width: 100px;
   padding: 8px;
   margin-right: 10px;
   border: 1px solid #ccc;
@@ -58,4 +60,15 @@ button {
 
 button:hover {
   background: #0056b3;
+}
+
+.flex-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
 }
